--- a/style.css
+++ b/style.css
@@ -45,7 +45,9 @@ button {
 }
 
 .reminder,
-.crushPercentage {
+.crushPercentage,
+.crushMessage {
+	text-align: center;
 	color: #e83f1a;
 	font-size: 14px;
 	padding: 0.5em;
